force-app/main/default/objects/AI_Workspace_Sync_Log__c/AI_Workspace_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for data synchronization jobs (Email, Calendar, Tasks, Contacts). Tracks sync status, counts, errors, and delta tokens per user per provider per entity type. Named Email_Sync_Log for historical reasons but supports all sync entity types.</description>
    <label>AI Workspace Sync Log</label>
    <nameField>
        <displayFormat>ESL-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workspace Sync Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>