force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Delta_Token__c.field-meta.xml
<CustomField>
    <fullName>Delta_Token__c</fullName>
    <description>Microsoft Graph deltaLink or Google sync token for incremental sync. This opaque token is returned by the provider and used to fetch only changed items on subsequent syncs.</description>
    <inlineHelpText>Sync token from provider for delta/incremental sync. Used to fetch only changed items.</inlineHelpText>
    <label>Delta Token</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>