force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Emails_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Emails_Duplicate__c</fullName>
    <description>Records skipped because they were already imported</description>
    <inlineHelpText>Number of records that were skipped because they were already imported in a previous sync. Duplicates are identified by their unique provider ID to prevent creating multiple copies of the same item.</inlineHelpText>
    <label>Duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>