force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Emails_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Emails_Excluded__c</fullName>
    <description>Records excluded due to filters (marketing, confidential, internal, etc.)</description>
    <inlineHelpText>Number of records that were filtered out and not processed. This includes marketing emails, confidential content, internal communications, or records matching exclusion rules defined in Sync Settings.</inlineHelpText>
    <label>Excluded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>