force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Emails_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Emails_Fetched__c</fullName>
    <description>Total records fetched from provider (emails, events, or tasks)</description>
    <inlineHelpText>Total number of records retrieved from the email/calendar/task provider (Gmail, Outlook, etc.) during this sync operation.</inlineHelpText>
    <label>Fetched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>