force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Emails_Imported__c.field-meta.xml
<CustomField>
    <fullName>Emails_Imported__c</fullName>
    <description>Records successfully imported to Salesforce</description>
    <inlineHelpText>Number of actual Salesforce records created during this sync (EmailMessage, Event, or Task). This represents successfully imported items that are now available in Salesforce.</inlineHelpText>
    <label>Imported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>