force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Emails_Matched__c.field-meta.xml
<CustomField>
    <fullName>Emails_Matched__c</fullName>
    <description>Records that matched to CRM records (Lead, Contact, or User)</description>
    <inlineHelpText>Number of records that successfully matched to existing Lead or Contact records in Salesforce based on email address matching and precedence rules.</inlineHelpText>
    <label>Matched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>