force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Emails_Unmatched__c.field-meta.xml
<CustomField>
    <fullName>Emails_Unmatched__c</fullName>
    <description>Records with no CRM record match</description>
    <inlineHelpText>Number of records where no matching Lead or Contact was found in Salesforce. These records were processed but not linked to any CRM record.</inlineHelpText>
    <label>Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>