force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>When the sync job completed</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>