force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Events_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Events_Duplicate__c</fullName>
    <description>Number of calendar events skipped because already imported</description>
    <label>Events Duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>