force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Events_Failed__c.field-meta.xml
<CustomField>
    <fullName>Events_Failed__c</fullName>
    <description>Number of calendar events that failed to import</description>
    <label>Events Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>