force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Events_Imported__c.field-meta.xml
<CustomField>
    <fullName>Events_Imported__c</fullName>
    <description>Number of calendar events successfully imported</description>
    <label>Events Imported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>