force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Exclusion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Summary__c</fullName>
    <description>Summary of exclusion reasons (JSON)</description>
    <label>Exclusion Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>