force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Gmail_Forward_Cursor__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Forward_Cursor__c</fullName>
    <description>For Gmail sync: tracks the newest email datetime processed. Used as the starting point for forward sync to catch new emails. Gmail API returns newest first, so this cursor represents our most recent known email.</description>
    <label>Gmail Forward Cursor</label>
    <type>DateTime</type>
</CustomField>