force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Processing_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Seconds__c</fullName>
    <description>Total processing time in seconds</description>
    <label>Processing Time (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>