force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>Provider type for workspace sync (EMAIL, CALENDAR, or TASKS for each provider)</description>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MICROSOFT_EMAIL</fullName>
                <label>Microsoft Email</label>
            </value>
            <value>
                <fullName>GMAIL_EMAIL</fullName>
                <label>Google Email</label>
            </value>
            <value>
                <fullName>MICROSOFT_CALENDAR</fullName>
                <label>Microsoft Calendar</label>
            </value>
            <value>
                <fullName>GOOGLE_CALENDAR</fullName>
                <label>Google Calendar</label>
            </value>
            <value>
                <fullName>MICROSOFT_TASKS</fullName>
                <label>Microsoft Tasks</label>
            </value>
            <value>
                <fullName>GOOGLE_TASKS</fullName>
                <label>Google Tasks</label>
            </value>
            <value>
                <fullName>GMAIL</fullName>
                <isActive>false</isActive>
                <label>GMAIL</label>
            </value>
            <value>
                <fullName>MICROSOFT_GRAPH</fullName>
                <isActive>false</isActive>
                <label>MICROSOFT_GRAPH</label>
            </value>
            <value>
                <fullName>MICROSOFT_TODO</fullName>
                <isActive>false</isActive>
                <label>MICROSOFT_TODO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>