force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type__c</fullName>
    <description>How the sync was triggered</description>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Webhook</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>