force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Sync_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Sync_Window_End__c</fullName>
    <description>End of the email date range being synced</description>
    <label>Sync Window End</label>
    <type>DateTime</type>
</CustomField>