force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/Sync_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Sync_Window_Start__c</fullName>
    <description>Start of the email date range being synced</description>
    <label>Sync Window Start</label>
    <type>DateTime</type>
</CustomField>