force-app/main/default/objects/AI_Workspace_Sync_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user whose mailbox was synced</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Workspace_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>