force-app/main/default/objects/AI_Workspace_Sync_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Provider_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Emails_Fetched__c</columns>
    <columns>Emails_Imported__c</columns>
    <columns>Processing_Time_Seconds__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>